2001-09-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* tools/uctools.h, tools/wud.c: some small changes to wud's output
	* usecode/ucdisasm.cc, usecode/ucinternal.*: usecode trace disassembler
	* usecode/useval.*: added a short output format for long arrays
	* exult.cc: set "config/debug/trace/usecode" to "verbose" to enable
	the new (painfully verbose) usecode instruction trace mode.
	(only works when DEBUG is defined)

2001-09-21  Ryan Nunn <triforce@merlin.net.au>
	* msvcstuff/.cvsignore : Fixed some problems added more files
	* msvcstuff/Exult.dsw : Forgot to re-add this ages ago.
	* msvcstuff/exconfig/* : Files for exconfig helper dll used with the
	  new windows installer.

2001-09-21  Ryan Nunn <triforce@merlin.net.au>
	* objs/animate.cc : Fixing bubbles

2001-09-21  Max Horn  <max@quendi.de>
	* mapedit/Makefile.am: GTK_LIBS value from gtk-config is now used;
	fixed strange make warning (not really sure why this fix helps)

2001-09-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* animate.cc: fixed division by zero in the 'bubbles' animation

2001-09-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Configuration.cc, keyring.cc: added missing #include
	* objs/contain.cc: save correct dead-body-npc-number in SI
	* readnpcs.cc: only skip SI NPCs >= 233 (instead of >= 231)
	
2001-09-20  Ryan Nunn <triforce@merlin.net.au>
	* audio/Midi.h : Fixed the crash when saving a game with midi disabled
	* keyactions.cc, readnpcs.cc, conf/Configuration.cc,
	  usecode/keyring.cc, usecode/ucinternal.cc: Replaced catch(...) with
	  catch (exult_exception &e)

2001-09-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc: fixed crash when saving with sound disabled
	* utils.h: added Write4s (s = signed)
	* ucinternal.cc: cleared up error message

2001-09-20  Max Horn  <max@quendi.de>
	* audio/midi_drivers/mac_midi.cc: made compile with OS X 10.1