@@ -1,3 +1,8 @@
+2001-09-22  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* schedule.cc (public): Better checks for occupied chairs.
+	* objs/objs.cc:  A find_closest(vec,...) added.
+
 2001-09-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* tools/uctools.h, tools/wud.c: some small changes to wud's output
 	* usecode/ucdisasm.cc, usecode/ucinternal.*: usecode trace disassembler
